--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+    <!-- This is bootstrap class jumbotron  -->
+
     <div class="jumbotron text-center">
         <h1>Welcome to my firts bootstrap</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, mollitia? Asperiores itaque ipsam magni, eveniet iure temporibus mollitia dolore quasi consectetur, nemo, aliquid possimus. Facere consectetur neque corrupti eum omnis!</p>
